# dsf2flac

./: .gitignore  CMakeLists.txt  InstallDependencies.sh  README.md
cmakemodules/: FindFlac.cmake  FindId3.cmake  FindOgg.cmake  FindRt.cmake  FindZ.cmake
src/: cmdline.c  cmdline.h  dop_packer.cpp  dsd_decimator.cpp  dsd_decimator.h  dsd_sample_reader.cpp  dsd_sample_reader.h  dsdiff_file_reader.cpp  dsf2flac.doxyfile  dsf_file_reader.cpp  main.cpp  tagConversion.h
src/wave/: AudioFile.h
